# Cognitive-OS-ATHENOS-AI

./: .gitignore  Cargo.toml  PHASE_A_SUMMARY.md  PHASE_B_SUMMARY.md  PHASE_C_SUMMARY.md  PHASE_D_SUMMARY.md  README.md
.cursor/: mcp.json
.cursor/rules/: athenos-rules.mdc
Documentation/: Athenos_AI_Strategy.md  DATA 1.txt  DATA 2.txt  DATA 3.txt  FULL PROJECT OVERVIEW.txt  MCP_SETUP.md  STORY ABOUT THE PROJECT.txt  Strategic_Reinforcements_Gap_Closures.md  TRAINING CONCEPT.txt
data/: athenos_seed.jsonl
metrics/: .gitkeep  README.md
src/: lib.rs  main.rs  types.rs
src/analytics/: mod.rs
src/api/: mod.rs
src/auto_action/: mod.rs
src/beta/: mod.rs
src/cognitive_twins/: mod.rs
src/cohort/: mod.rs
src/compliance/: mod.rs
src/consent/: mod.rs
src/edge/: mod.rs
src/emotion/: mod.rs
src/emotional_copilot/: mod.rs
src/enterprise/: mod.rs
src/federated/: mod.rs
src/knowledge_loop/: mod.rs
src/launch/: mod.rs
src/local_stack/: mod.rs
src/marketplace/: mod.rs
src/microlearning/: mod.rs
src/models/: mod.rs
src/multi_region/: mod.rs
src/pattern_miner/: mod.rs
src/plugin/: mod.rs
src/privacy/: mod.rs
src/rag/: mod.rs
src/rag_expanded/: mod.rs
src/reflection/: mod.rs
src/replay/: mod.rs
src/report/: mod.rs
src/rl_policy/: mod.rs
src/sandbox/: mod.rs
src/scheduling/: mod.rs
src/security/: mod.rs
src/shortcut/: mod.rs
src/victory/: mod.rs
src/wisdom/: mod.rs
ui/: package.json
ui/src/: ReportDashboard.tsx
