[package]
name = "athenos-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# Privacy & Encryption
sodiumoxide = "0.2"
ring = "0.17"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Vector embeddings (local)
candle-core = "0.4"
candle-transformers = "0.4"

# Vector similarity search (RAG)
hamming = "0.1"

# OS Events (Windows)
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

# Testing
[dev-dependencies]
mockall = "0.12"

[[bin]]
name = "athenos"
path = "src/main.rs"

